--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "sweetalert2": "^11.18.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
