--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^6.6.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "firebase-admin": "^13.2.0",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
