--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@mui/material": "^7.0.2",
     "@prisma/client": "^6.6.0",
     "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "firebase-admin": "^13.2.0",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
@@ -32,7 +32,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
