--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,15 @@
-version: '3.8'
-
 services:
-  db:
-    image: postgres:latest
-    restart: always
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydb
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    ports:
-      - '5431:5432'
-
   web:
     build: .
+    container_name: nextjs-app
     ports:
-      - '3000:3000'
+      - "3000:3000"
     environment:
-      - DATABASE_URL=postgresql://user:password@db:5432/mydb
-    depends_on:
-      - db
-    volumes:
-      - .:/app
-    command: sh -c "npx prisma migrate deploy && npm start"
+      - DATABASE_URL=postgresql://admin:password@postgres-dev:5432/starter
+    networks:
+      - my-network
+    command: sh -c "npx prisma db pull && npx prisma generate && npm run build && npm start"
 
-volumes:
-  pgdata:
+networks:
+  my-network:
+    external: true
