--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@prisma/client": "^6.6.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "firebase-admin": "^13.2.0",
@@ -27,6 +28,8 @@
     "next-auth": "^4.24.11",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.18.0"
   },
   "devDependencies": {
@@ -39,10 +42,15 @@
     "eslint-config-next": "15.3.0",
     "prisma": "^6.6.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
